--- a/bin/WebApplication2.dll.config
+++ b/bin/WebApplication2.dll.config
@@ -63,6 +63,7 @@
   <connectionStrings>
     <add name="Model1" connectionString="data source=DESKTOP-F8207O3;initial catalog=TrangBaoNgan;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model11" connectionString="data source=DESKTOP-F8207O3;initial catalog=TrangBaoNgan;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ModelMusic" connectionString="data source=DESKTOP-F8207O3;initial catalog=NgheNhac;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
